--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "sass --watch sass/index.scss css/styles.css"
+    "scss": "sass --watch sass/styles.scss css/styles.css"
   },
   "repository": {
     "type": "git",
